<resources xmlns:xliff="http://schemas.android.com/apk/res/android">
    <string name="app_name" translatable="false">Music Player</string>
    <string name="hello_blank_fragment">This is the main fragment</string>
    <string-array name="fragments_titles">
        <item>ALBUMS</item>
        <item>ARTISTS</item>
        <item>SONGS</item>
        <item>GENRES</item>
        <item>PLAYLISTS</item>
        <item>DIRECTORY</item>
    </string-array>
    <string-array name="scan_frequency_entries">
        <item>Scan at every startup</item>
        <item>Scan at every 3 startups</item>
        <item>Scan at every 5 startups</item>
        <item>Scan at every 10 startups</item>
        <item>Scan at every 20 startups</item>
        <item>Scan manually</item>
    </string-array>
    <string-array name="scan_frequency_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="ok" translatable="false">Ok</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="overwrite" translatable="false">Overwrite</string>
    <string name="new_playlist">New Playlist</string>
    <string name="add_to_playlist">Add To Playlist</string>
    <string name="ringtone_set"> has been set as your ringtone.</string>
    <string name="add_to_queue">Add To Queue</string>
    <string name="play_next">Play Next</string>
    <string name="delete_playlist">Delete Playlist?</string>
    <string name="rename_playlist">Rename Playlist</string>
    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%3$02d</xliff:g></string>
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%2$02d:%3$02d</xliff:g></string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="playlist_deleted">Playlist deleted.</string>
    <string name="shuffle">Shuffle</string>
    <string name="unable_to_get_audio_focus">Unable to get audio focus.</string>
    <string name="done">Done</string>
    <string name="ascending">ASCENDING</string>
    <string name="stop">Stop</string>
    <string name="sd_access">You need to grant SD card access to Boom to modify contents on external SD card.\n</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="repeat_song_instruction">Drag the scrubbers to select the part of the song you would like to repeat.</string>
    <string name="favorites">Favorites</string>
    <string name="top_played">Top Played</string>
    <string name="recently_played">Recently Played</string>
    <string name="count_song"><xliff:g id="count">%d</xliff:g> song</string>
    <string name="count_songs"><xliff:g id="count">%d</xliff:g> songs</string>
    <string name="count_album"><xliff:g id="count">%d</xliff:g> album</string>
    <string name="count_albums"><xliff:g id="count">%d</xliff:g> albums</string>
    <string name="play">Play</string>
    <string name="empty_playlist">Empty playlist</string>
    <string name="clear_recently_played">Clear recently played list?</string>
    <string name="clear_recently_played_long">All songs from the recently played list will be cleared.</string>
    <string name="clear_favorites">Clear favorites</string>
    <string name="clear_top_played">Clear top played</string>
    <string name="edit_weeks">Edit weeks</string>
    <string name="set_ringtone">Set Ringtone</string>
    <string name="write_settings_desc">Music player requires permission to \'Write Settings\' in order to set your ringtone.\n\n After granting permission, try setting your ringtone again.</string>
    <string name="songs_added_to_queue">songs added to queue.</string>
    <string name="use_as_phone_ringtone">Use As Ringtone</string>
    <string name="share">Share</string>
    <string name="a_b_repeat">A-B Repeat</string>
    <string name="repeat"> Repeat</string>
    <string name="these_files_will_be_deleted_permanently">These files will be deleted permanently.</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="new_playlist_name">Playlist name</string>
    <string name="save">Save</string>
    <string name="recently_added_desc">Display songs added in last</string>
    <string name="sort_song_name">Song Name</string>
    <string name="sort_default">Default</string>
    <string name="sort_artist_name">Artist Name</string>
    <string name="sort_album_name">Album Name</string>
    <string name="sort_date_added_name">Date Added</string>
    <string name="sort_song_year_name">Song Year</string>
    <string name="sort_song_duration_name">Song Duration</string>
    <string name="sort_track_no_name">Track #</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_no_of_songs"># Of Songs</string>
    <string name="sort_no_of_albums"># Of Albums</string>
    <string name="sort_file_name">File Name</string>
    <string name="edit_tags">Edit tags</string>
    <string name="rename">Rename</string>
    <string name="copy">Copy</string>
    <string name="move">Move</string>
    <string name="equalizer">Equalizer</string>
    <string name="save_current_position">Save current position</string>
    <string name="go_to">Go to</string>
    <string name="no_songs_to_skip_to">No songs to skip to.</string>
    <string name="grant_permission">Grant Permission!</string>
    <string name="to_grant_access">To grant access : \n</string>
    <string name="go_to_this_artist">Go to this artist</string>
    <string name="go_to_this_album">Go to this album</string>
    <string name="permission_line_one">- Click the 3-dots menu icon on the  following dialog and select \'Show SD card\'</string>
    <string name="permission_line_two">- Tap the navigation icon on the left then  select desired storage device you want to   grant access to , typically \'SD Card\'.</string>
    <string name="permission_line_three">- Tap \'Select\' button at the bottom.</string>
    <string name="permission_line_four">(Make sure you choose Root directory of   the storage)</string>
    <string name="permission_line_five">Do you want to grant SD card access to Boom Player ?</string>
    <string name="virtualizer">Virtualizer</string>
    <string name="bass_boost">Bass Boost</string>
    <string name="save_preset">Save Preset</string>
    <string name="add_to_favorites">Add To Favorites</string>
    <string name="folder_list_item_type">folder_list_item_type</string>
    <string name="open_settings">Open Settings</string>
    <string name="grant_permission_message">You will have to grant permission from settings.\nOpen Settings?</string>
    <string name="delete">Delete</string>
    <string name="enter_playlist_name">Enter Playlist Name</string>
    <string name="play_list_renamed">Play list renamed.</string>
    <string name="do_you_want_to_delete">Playlist will be deleted permanently.</string>
    <string name="load_preset">Load Preset</string>
    <string name="preset_saved">Preset saved!</string>
    <string name="hey_i_am_empty">Opps You are here!! \n I am empty.</string>
    <string name="tag_title">Title</string>
    <string name="tag_artist">Artist</string>
    <string name="tag_album">Album</string>
    <string name="tag_genre">Genre</string>
    <string name="tag_year">Year</string>
    <string name="tag_album_artist">Album Artist</string>
    <string name="tag_producer">Producer</string>
    <string name="tag_comments">Comments</string>
    <string name="tag_track">Track</string>
    <string name="track_is_malformed">Track is malformed.</string>
    <string name="updating_tags">Updating tags.</string>
    <string name="now_playing">Now Playing</string>
    <string name="will_be_played_next">will be played next.</string>
    <string name="added_to_queue"> added to queue.</string>
    <string name="queue_is_empty">Queue is empty.</string>
    <string name="added_to_playlist">added to playlist.</string>
    <string name="deleted">deleted.</string>
    <string name="properties">Properties</string>
    <string name="deleting">Deleting</string>
    <string name="song_failed_to_delete">Failed to delete.</string>
    <string name="share_tracks_using">Share Track Using</string>
    <string name="moving_file">Moving file.</string>
    <string name="done_copy">Done copying file(s).</string>
    <string name="done_move">Done moving file(s).</string>
    <string name="copying_file">Copying file.</string>
    <string name="file_could_not_be_written_new_location">The file(s) could not be written to the new location.</string>
    <string name="source_target_same">The source and destination folders are the same.</string>
    <string name="run_in_background">Run In Background</string>
    <string name="preset_name">Preset Name</string>
    <string name="recentyl_added">Recently Added</string>
    <string name="unfavorite">Clear favorites?</string>
    <string name="unfavorite_long">Favorite playlist will be cleared.</string>
    <string name="all_favorites_song_removed_from_playlist">All favorites songs removed from the playlist.</string>
    <string name="recently_played_cleared">All songs removed from the recently played playlist.</string>
    <string name="top_played_list_cleared">All songs removed from the Top Played playlist.</string>
    <string name="clear_top_tracks">Clear top played list?</string>
    <string name="clear_top_played_long">All songs from the Top Played list will be cleared.</string>
    <string name="song_added_to_favorites_playlist">Song added to favorites playlist.</string>
    <string name="song_removed_from_favorites_playlist">Song removed from favorites playlist.</string>
    <string name="Search">Search</string>
    <string name="fetch_best_match">Fetch best match</string>
    <string name="search_web">Search Web</string>
    <string name="from_gallery">From Gallery</string>
    <string name="fetching_best_matched_result_for_this_track">Fetching best matched result for this track.</string>
    <string name="failed_to_get_result">Failed to get result.</string>
    <string name="pause_timer_is_set">Pause timer is set.</string>
    <string name="paused_by_timer">Paused by timer.</string>
    <string name="timer_is_running">Timer is running</string>
    <string name="music_library">Scan Library</string>
    <string name="rebuild_music_library">Scan music library</string>
    <string name="scan_frequency">Automatic Scan</string>
    <string name="sort_genre_name">Genre Name</string>
    <string name="no_songs_in_this_album">No songs in this album.</string>
    <string name="no_albums_by_this_artist">No Albums by this artist.</string>
    <string name="discard_changes">Discard changes?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="network_error">Check your network connection.</string>
    <string name="appearance">Display Setting</string>
    <string name="appearance_description">Change the display setting, tabs &amp; more.</string>
    <string name="album_and_artist_art">Album &amp; Artist Art</string>
    <string name="audio_settings">Audio Settings</string>
    <string name="music_folders_description">Scan your music library &amp; change selected music folders &amp; file</string>
    <string name="default_browser">Default Browser</string>
    <string name="default_browser_description">Select the default browser to display when app open.</string>
    <string name="tabs">Tabs</string>
    <string name="choose_tab_items">Arrange the tab item of  the library</string>
    <string name="artist_art_description">Download and display artist arts.</string>
    <string name="artist_art">Artist Art</string>
    <string name="download_album_art_description">Scan and download the missing album arts for the music and embed them in the files.</string>
    <string name="scan_and_download_album_art">Download Album Art</string>
</resources>